# Homework

./: README.md  main.py  pyproject.toml
src/: masks.py  processing.py  widget.py
